# Gratheory

./: Graphly.py  LICENCE.md  PyGraph.py  README.md  pyproject.toml
src/: gratheory.py
